Update - final bugs + CSS

--- a/frontend/src/data/projects.json
+++ b/frontend/src/data/projects.json
@@ -3,16 +3,16 @@
       "id": 1,
       "titre": "Créez une application web de location immobilière avec React",
       "logo": "/kasaLogo.png",
-      "image": "https://m.media-amazon.com/images/I/615VYUAAB1L.__AC_SY300_SX300_QL70_ML2_.jpg",
+      "image": "/kasaTesto.png",
       "description": "Description du projet 1.",
-      "competences": ["HTML", "CSS", "JavaScript"],
-      "lien": "https://lien-du-projet-1.com"
+      "competences": ["React", "Sass", "JavaScript"],
+      "lien": "https://kasa-op.vercel.app/"
     },
     {
       "id": 2,
       "titre": "Créez la page d'accueil d'une agence de voyage avec HTML & CSS",
       "logo": "/bookiLogo.png",
-      "image": "/bookiSite.png",
+      "image": "/bookiTesto.png",
       "description": "L’entreprise souhaite développer un site Internet qui permette aux usagers de trouver des hébergements et des activités dans la ville de leur choix.",
       "competences": ["Html", "CSS"],
       "lien": "https://lien-du-projet-2.com"
@@ -21,27 +21,27 @@
       "id": 3,
       "titre": "Développez le back-end d'un site de notation de livres",
       "logo": "/mvgLogo.png",
-      "image": "image3.jpg",
+      "image": "mvgSite.png",
       "description": "Vous êtes développeur back-end en freelance depuis maintenant un an dans la région de Lille. */ Il s’agit d’une petite chaîne de librairies qui souhaite ouvrir un site de référencement et de notation de livres.  ",
-      "competences": ["Python", "Django", "PostgreSQL"],
+      "competences": ["React", "Node.js", "MongoDB"],
       "lien": "https://lien-du-projet-3.com"
     },
     {
       "id": 4,
       "titre": "Créez une page web dynamique avec JavaScript",
       "logo": "/bluelLogo.png",
-      "image": "image3.jpg",
+      "image": "bluelLogo.png",
       "description": "L’entreprise souhaite développer un site Internet qui permette aux usagers de trouver des hébergements et des activités dans la ville de leur choix.",
-      "competences": ["Python", "Django", "PostgreSQL"],
+      "competences": ["Html", "CSS", "JavaScript"],
       "lien": "https://lien-du-projet-3.com"
     },
     {
       "id": 5,
       "titre": "Débuggez et optimisez un site de photographe",
       "logo": "/carducciLogo.png",
-      "image": "image3.jpg",
-      "description": "L’entreprise souhaite développer un site Internet qui permette aux usagers de trouver des hébergements et des activités dans la ville de leur choix.",
-      "competences": ["Python", "Django", "PostgreSQL"],
+      "image": "/carducciSite.png",
+      "description": "Vous êtes développeur freelance, et vous décidez de proposer vos services d’optimisation SEO à de nouveaux clients. Pour ce faire, vous avez analysé plusieurs sites internet. Parmi vos prospects, il y a le site de Nina Carducci, une photographe dont vous a parlé l’un de vos amis.",
+      "competences": ["Audit", "Lighthouse", "JavaScript"],
       "lien": "https://lien-du-projet-3.com"
     }
   ]
